[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipld_car"
version = "0.0.1"
authors = [
  { name="Alan Shaw", email="alan@storacha.network" },
]
description = "Content Addressable aRchive format reader and writer."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0 OR MIT"
license-files = ["LICENSE.md"]
dependencies = [
    "bases",
    "dag-cbor",
    "multiformats",
    "typing_validation",
    "typing_extensions"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.19",
  "pylint>=4.0",
  "pytest>=9.0"
]

[project.urls]
Homepage = "https://github.com/storacha/py-ipld-car"
Issues = "https://github.com/storacha/py-ipld-car/issues"

